Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97649

androiddeployqt exits with signing if the path contains spaces

XMLWordPrintable

    • Linux/X11, Windows
    • 6598a26a138aaab13e28905a28e7ce21011d30b5 (qt/qtbase/dev) 44f6c0ed1ed3381d44d44fac9070279bdf387902 (qt/qtbase/6.2) 448643f8ae11b7be08a7018ebf0a6b827dc33efa (qt/tqtc-qtbase/5.15)

      When trying to sign android package that has been built to a path that contains spaces, androiddeployqt exists with exit code 15.

      Signing itself actually seems to succeeds just fine, so it is probably just the QFile::remove() call at the end of signPackage() that is failing. At least, the unsigned apk still remains there and there are no errors in the output so that seems to be the only possibility.

      Can be reproduced with any example, just set shadow build path to something that contains spaces and set it to sign the package.

        For Gerrit Dashboard: QTBUG-97649
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes